I fix the erros in collection and interfaces 'Book' and 'Copies', but need to test!